--- a/integrationtests/src/main/asciidoc/readme.adoc
+++ b/integrationtests/src/main/asciidoc/readme.adoc
@@ -49,3 +49,6 @@ operation::echo[snippets='curl-request,http-request,http-response,response-field
 As simple ping signal which returns the current system timestamp
 
 operation::ping[snippets='curl-request,http-request,http-response,response-fields']
+
+=== User profile
+User profile is a module created to answer CRUD(Create,read,update and delete) requests.
