--- a/integrationtests/src/main/asciidoc/readme.adoc
+++ b/integrationtests/src/main/asciidoc/readme.adoc
@@ -50,5 +50,31 @@ As simple ping signal which returns the current system timestamp
 
 operation::ping[snippets='curl-request,http-request,http-response,response-fields']
 
-=== User profile
-User profile is a module created to answer CRUD(Create,read,update and delete) requests.
+=== User
+User is a module created to answer CRUD(Create,read,update and delete) requests,
+it does not always return a json, but a Http code that show if was successful.
+Next examples of http requests and responses are exposed
+
+==== Create
+To work with creation of users, a post request is needed. It's body should contain the following
+data: "name" and "password".
+
+operation::user_create[snippets='curl-request,http-request,http-response']
+
+==== Read
+To read users is not required body, just the "id" which is sent by GET http verb. This "id" should
+be in the URL at the end.
+
+operation::user_read[snippets='curl-request,http-request,http-response,response-fields']
+
+==== Update
+To update an user, the url is equal to the Read case. The difference is in the verb which is
+PUT http, and the body of the request should contain the new values of "name" and "password".
+
+operation::user_update[snippets='curl-request,http-request,http-response']
+
+==== Delete
+To delete an user is required it's "id" and the http verb is DELETE. The URL is equal to Read
+case.
+
+operation::user_delete[snippets='curl-request,http-request,http-response']
